--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <div>
                     <p class="font-bold">Maracujá com Nuttela</p>
-                    <p class="text-sm">Geladão de Maracujá com Nuttella, super cremoso.</p>
+                    <p class="text-sm">Refrescante e irresistível, com o sabor tropical do maracujá e o toque da Nutella.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 10.00</p>
@@ -84,7 +84,7 @@
 
                 <div>
                     <p class="font-bold">Tablito</p>
-                    <p class="text-sm">Leite Ninho com pedaços de Chocolate Branco e amendoim.</p>
+                    <p class="text-sm">Um sabor irresistível de Tablito com crocantes pedaços de amendoim e toque de chocolate branco, refrescante e cheio de sabor.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 10.00</p>
@@ -105,7 +105,7 @@
 
                 <div>
                     <p class="font-bold">Paçoca</p>
-                    <p class="text-sm">Paçoca com leite Ninho.</p>
+                    <p class="text-sm">Sabor irresistível da paçoca, cremoso e refrescante, perfeito para matar a vontade de doce..</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 08.00</p>
@@ -121,18 +121,17 @@
             </div>
 
             <div class="flex gap-2">
-                <img src="./assets/hamb-3.png" alt="hamburguer da Casa"
+                <img src="./assets/Dudi`s/Pudim.jpg" alt="Pudim"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
 
                 <div>
-                    <p class="font-bold">Hamburguer da Casa</p>
-                    <p class="text-sm">Pão levinho de fermentação natural da trigou, burger 160g, queijo prato e
-                        maionese da casa.</p>
+                    <p class="font-bold">Pudim</p>
+                    <p class="text-sm">Cremoso e refrescante, o clássico pudim agora em versão geladinha para se deliciar a qualquer hora.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p class="font-bold text-lg">R$ 30.00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburguer da Casa"
-                            data-price="30.00">
+                        <p class="font-bold text-lg">R$ 10.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pudim"
+                            data-price="10.00">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
 
@@ -148,8 +147,7 @@
 
                 <div>
                     <p class="font-bold">teste</p>
-                    <p class="text-sm">Pão levinho de fermentação natural da trigou, burger 160g, queijo prato e
-                        maionese da casa.</p>
+                    <p class="text-sm">Refrescante e irresistível, com o sabor tropical do maracujá e o toque da Nutella..</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 15.00</p>
@@ -168,7 +166,7 @@
 
         <div class="mx-auto max-w-7xl px-2 my-2 ">
             <h2 class="font-bold text-3xl">
-                Bebidas
+                Sobremesas
             </h2>
         </div>
 
