--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
 
             <div class="flex gap-2">
-                <img src="./assets/Dudi`s/paçoca.jpg" alt="Paçoca"
+                <img src="./assets/Dudi`s/paçoca 2.jpg" alt="Paçoca"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
 
                 <div>
@@ -172,18 +172,17 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16" id="menu">
             <div class="flex gap-2 w-full">
-                <img src="./assets/refri-1.png" alt="Coca Cola"
+                <img src="./assets/Dudi`s/bombom de uva.jpg" alt="Bombom de uva"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
 
                 <div class="w-full">
-                    <p class="font-bold">Coca-Cola Lata 350ml</p>
-                    <p class="text-sm">A Coca-Cola é o tradicional refrigerante de Cola consumido no mundo inteiro e com
-                        sabor inconfundível.</p>
+                    <p class="font-bold">Bombom de Uva</p>
+                    <p class="text-sm">Delicioso sabor de uva envolto em ganache de chocolate, finalizado com creme Ninho cremoso.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p class="font-bold text-lg">R$ 10.00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Coca Cola Lata"
-                            data-price="10.00">
+                        <p class="font-bold text-lg">R$ 15.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Bombom de uva"
+                            data-price="15.00">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
 
@@ -194,13 +193,12 @@
             </div>
 
             <div class="flex gap-2 w-full">
-                <img src="./assets/refri-2.png" alt="Guarana antartica Lata"
+                <img src="./assets/Dudi`s/mousse de maracuja.jpg" alt="Guarana antartica Lata"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
 
                 <div class="w-full">
-                    <p class="font-bold">Guaraná Antarctica Lata 350ml</p>
-                    <p class="text-sm">Experimente o autêntico sabor do Brasil com o Refrigerante Guaraná Antarctica
-                        Lata 350ml.</p>
+                    <p class="font-bold">Mousse de Maracujá</p>
+                    <p class="text-sm">Cremoso mousse de maracujá com casquinha de chocolate crocante e finalizado com granulado, sabor e textura irresistíveis.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 10.00</p>
