mudando imagem do link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Dudis - O Sabor da Felicidade!" />
-        <meta property="og:image" content="https://projeto-hamburgueria-tau.vercel.app/assets/hamb-1.png" />
+        <meta property="og:image" content="https://projeto-hamburgueria-tau.vercel.app/assets/Logo.png" />
         <meta property="og:description" content="Os Melhores doces da Região!" />
         <meta property="og:site_name" content="Devburguer" />
 
