--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
 
             <div class="flex gap-2 w-full">
-                <img src="./assets/Dudi`s/mousse de maracuja.jpg" alt="Guarana antartica Lata"
+                <img src="./assets/Dudi`s/mousse de maracuja.jpg" alt="Mousse de Maracujá
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
 
                 <div class="w-full">
@@ -202,7 +202,7 @@
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 10.00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Guaraná antartica Lata"
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Mousse de maracujá"
                             data-price="10.00">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -228,6 +228,7 @@
             <input type="text" placeholder="Digite seu endereço completo..." id="address"
                 class="w-full border-2 p-1 rounded my-1" />
             <p class="text-red-500 hidden" id="address-warn">Digite seu Endereço completo!</p>
+            
 
             <div class="flex items-center justify-between mt-5 w-full">
                 <button id="close-modal-btn" class="bg-red-500 text-white px-4 py-1 rounded">Fechar</button>
