--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
 
             <div class="flex gap-2 w-full">
-                <img src="./assets/Dudi`s/mousse de maracuja.jpg" alt="Mousse de Maracujá
+                <img src="./assets/Dudi`s/mousse de maracuja.jpg" alt="Mousse de Maracujá"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
 
                 <div class="w-full">
@@ -228,6 +228,11 @@
             <input type="text" placeholder="Digite seu endereço completo..." id="address"
                 class="w-full border-2 p-1 rounded my-1" />
             <p class="text-red-500 hidden" id="address-warn">Digite seu Endereço completo!</p>
+
+            <p class="font-bold mt-4">Frete:</p>
+            <input type="number" placeholder="Digite o valor do frete..." id="frete"
+             class="w-full border-2 p-1 rounded my-1" min="0" step="0.01"/>
+
             
 
             <div class="flex items-center justify-between mt-5 w-full">
