--- a/index.html
+++ b/index.html
@@ -229,10 +229,11 @@
                 class="w-full border-2 p-1 rounded my-1" />
             <p class="text-red-500 hidden" id="address-warn">Digite seu Endereço completo!</p>
 
-            <p class="font-bold mt-4">Frete:</p>
-            <input type="number" placeholder="Digite o valor do frete..." id="frete"
-             class="w-full border-2 p-1 rounded my-1" min="0" step="0.01"/>
-
+            <!-- <p class="font-bold mt-4">CEP:</p>
+            <input type="text" placeholder="Digite seu CEP..." id="cep"
+            class="w-full border-2 p-1 rounded my-1" maxlength="9"/>
+            <p class="text-red-500 hidden" id="cep-warn">Digite um CEP válido!</p>
+            -->
             
 
             <div class="flex items-center justify-between mt-5 w-full">
