colocando mais fotos e produtos no catalogo

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
 
             
             <div class="flex gap-2">
-                <img src="./assets/Dudi`s/Maracujá  com nutella.jpg" alt="Maracujá com Nuttella"
+                <img src="./assets/Dudi`s/maracuja com casquinha.jpg" alt="Maracujá com Casquinha de Chocolate"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
 
                 <div>
-                    <p class="font-bold">Maracujá com Nuttela</p>
+                    <p class="font-bold">Maracujá com Casquinha de Chocolate</p>
                     <p class="text-sm">Refrescante e irresistível, com o sabor tropical do maracujá e o toque da Nutella.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 10.00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Maracujá com Nuttella"
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Maracujá com Casquinha de Chocolate"
                             data-price="10.00">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -142,17 +142,38 @@
             </div>
 
             <div class="flex gap-2">
-                <img src="./assets/fundo wallpapper.png" alt="teste"
+                <img src="./assets/Dudi`s/prestigio.jpg" alt="Prestigio"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
 
                 <div>
-                    <p class="font-bold">teste</p>
-                    <p class="text-sm">Refrescante e irresistível, com o sabor tropical do maracujá e o toque da Nutella..</p>
+                    <p class="font-bold">Prestigio</p>
+                    <p class="text-sm">Delicioso geladinho com recheio cremoso de coco e uma casquinha crocante de chocolate. Uma sobremesa gelada irresistível que combina sabor tropical e textura perfeita.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p class="font-bold text-lg">R$ 15.00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="teste"
-                            data-price="15.00">
+                        <p class="font-bold text-lg">R$ 10.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Prestigio"
+                            data-price="10.00">
+                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                        </button>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="flex gap-2">
+                <img src="./assets/Dudi`s/morango com ninho.jpg" alt="ninho com morango"
+                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
+
+                <div>
+                    <p class="font-bold">Ninho com Morango</p>
+                    <p class="text-sm">Geladinho cremoso de leite Ninho com pedaços suculentos de morango, proporcionando um sabor doce e refrescante que derrete na boca.</p>
+
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 10.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="ninho com morango"
+                            data-price="10.00">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
 
@@ -168,7 +189,7 @@
             <h2 class="font-bold text-3xl">
                 Sobremesas
             </h2>
-        </div>
+        </div><br>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16" id="menu">
             <div class="flex gap-2 w-full">
