alterando a descreição do produto

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <div>
                     <p class="font-bold">Maracujá com Casquinha de Chocolate</p>
-                    <p class="text-sm">Refrescante e irresistível, com o sabor tropical do maracujá e o toque da Nutella.</p>
+                    <p class="text-sm">Geladinho cremoso de maracujá com sabor tropical e refrescante, envolto por uma crocante casquinha de chocolate que traz contraste de textura e sabor irresistível.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 10.00</p>
